// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gradebook Table Fields Text snapshot 1`] = `
<span
  className="wrap-text-in-cell"
>
  myTag@place.com
</span>
`;

exports[`Gradebook Table Fields Username with external_user_key snapshot 1`] = `
<div>
  <span
    className="wrap-text-in-cell"
  >
    <div>
      <div>
        MyNameFromHere
      </div>
      <div
        className="student-key"
      >
        My name from another land
      </div>
    </div>
  </span>
</div>
`;

exports[`Gradebook Table Fields Username with external_user_key wraps external user key and username 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            "MyNameFromHere",
          ],
          "props": {},
          "type": "div",
        },
        {
          "children": [
            "My name from another land",
          ],
          "props": {
            "className": "student-key",
          },
          "type": "div",
        },
      ],
      "props": {},
      "type": "div",
    },
  ],
  "props": {
    "className": "wrap-text-in-cell",
  },
  "type": "span",
}
`;

exports[`Gradebook Table Fields Username without external_user_key snapshot 1`] = `
<div>
  <span
    className="wrap-text-in-cell"
  >
    <div>
      <div>
        MyNameFromHere
      </div>
    </div>
  </span>
</div>
`;
